--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit==1.31.1
-pandas==2.1.4
-numpy==1.26.4
-scikit-learn==1.3.2
-joblib==1.3.2
-yfinance==0.2.36
-matplotlib==3.8.2
+streamlit
+pandas
+numpy
+scikit-learn
+joblib
+yfinance
+matplotlib
